--- a/index.html
+++ b/index.html
@@ -4,32 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/favicon.ico" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</title>
   </head>
   <body class="body">
     <section class="container">
-       <header class="header">
+      <!-- header section -->
+      <header class="header">
         <div class="header__top">
-            <p>বাংলাদেশ জাতীয় তথ্য বাতায়ন</p>
+          <p>বাংলাদেশ জাতীয় তথ্য বাতায়ন</p>
         </div>
         <div class="header__title">
-            <img src="./assets/logo.png" alt="">
-            <div class="header__content">
-                <h1>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</h1>
-                <p>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</p>
-            </div>
+          <img src="./assets/logo.png" alt="" />
+          <div class="header__content">
+            <h1>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</h1>
+            <p>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</p>
+          </div>
         </div>
-       </header>
-       <section class="">
-        <article>
+        <nav class="nav">
+          <ul>
+            <li class=" health-1 active">স্বাস্থ্য কার্ড</li>
+            <li class="health-2">স্বাস্থ্য বীমা</li>
+            <li class="health-3">অনলাইন ডাক্তার</li>
+            <li class="health-4">অনলাইন রিপোর্ট</li>
+          </ul>
+        </nav>
+      </header>
+      <!-- content section -->
 
+      <section class="content">
+        <article class="content__main">
+          
         </article>
-        <aside>
-
-        </aside>
-       </section>
-
+        <aside class="content__sidebar"></aside>
+      </section>
     </section>
+
+    <script src="./script.js"></script>
   </body>
 </html>
