--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <nav class="nav">
           <ul>
-            <li class=" health-1 active">স্বাস্থ্য কার্ড</li>
+            <li aria-details="healthBima" class="health-1 active">স্বাস্থ্য কার্ড</li>
             <li class="health-2">স্বাস্থ্য বীমা</li>
             <li class="health-3">অনলাইন ডাক্তার</li>
             <li class="health-4">অনলাইন রিপোর্ট</li>
@@ -36,7 +36,16 @@
         <article class="content__main">
           
         </article>
-        <aside class="content__sidebar"></aside>
+        <aside class="content__sidebar">
+          <h2>মাননীয়  মন্ত্রী</h2>
+          <p>ডাঃ সামন্ত লাল সেন</p>
+          <p>মাননীয় মন্ত্রী</p>
+          <p>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</p>
+          <h2>প্রকাশনাঃ বদলে যাওয়া দৃশ্যপট</h2>
+          <img src="./assets/A Changing Scenario.png" alt="photo" width="250">
+          <h2>জরুরি হটলাইন</h2>
+          <img src="./assets/hotline_v.2_bn.png" alt="hotline" width="250">
+        </aside>
       </section>
     </section>
 
