--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="'image/x-icon" href="./assets/logo.png">
     <link rel="stylesheet" href="./style.css" />
     <title>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</title>
   </head>
@@ -23,10 +23,10 @@
         </div>
         <nav class="nav">
           <ul>
-            <li aria-details="healthBima" class="health-1 active">স্বাস্থ্য কার্ড</li>
-            <li class="health-2">স্বাস্থ্য বীমা</li>
-            <li class="health-3">অনলাইন ডাক্তার</li>
-            <li class="health-4">অনলাইন রিপোর্ট</li>
+            <li aria-details="healthCard" class="health-1 active">স্বাস্থ্য কার্ড</li>
+            <li aria-details="healthBima" class="health-2">স্বাস্থ্য বীমা</li>
+            <li aria-details="healthDoctor" class="health-3">অনলাইন ডাক্তার</li>
+            <li aria-details="healthReport" class="health-4">অনলাইন রিপোর্ট</li>
           </ul>
         </nav>
       </header>
@@ -34,7 +34,16 @@
 
       <section class="content">
         <article class="content__main">
-          
+          <article class="contain__info">
+            <h2>স্বাস্থ্য কার্ড</h2>
+            <p style="padding:20px;">
+              স্বাস্থ্য কার্ডের মাধ্যমে দেশের মানুষের স্বাস্থ্য সেবা নিশ্চিত করা । <br />
+              যেহেতু আমাদের দেশের মানুষের গড় আয়ু ২০২৩ সালের হিসেব অনুযায়ী ৭২.৩ বছর । তাই
+              এখানে ৪টা ধাপে বয়স ভিত্তিক কার্ড থাকবে, যে কার্ডগুলোতে সেবা গ্রহীতাদের
+              সংক্রিয় ভাবে টিকা তাদের পূর্বের রোগ পূর্বের কোন ঔষধ গ্রহণ করেছেন এবং নতুন
+              ভাবে তাদের কি কি ঔষধ চলছে তা সব কিছু আপডেট থাকবে । <br />
+            </p>
+          </article>
         </article>
         <aside class="content__sidebar">
           <h2>মাননীয়  মন্ত্রী</h2>
@@ -42,11 +51,14 @@
           <p>মাননীয় মন্ত্রী</p>
           <p>স্বাস্থ্য ও পরিবার কল্যাণ মন্ত্রণালয়</p>
           <h2>প্রকাশনাঃ বদলে যাওয়া দৃশ্যপট</h2>
-          <img src="./assets/A Changing Scenario.png" alt="photo" width="250">
+          <img src="./assets/A Changing Scenario.png" alt="photo">
           <h2>জরুরি হটলাইন</h2>
-          <img src="./assets/hotline_v.2_bn.png" alt="hotline" width="250">
+          <img src="./assets/hotline_v.2_bn.png" alt="hotline">
         </aside>
       </section>
+      <footer class="footer">
+        <img src="./assets/footer_top_bg.png" alt="footer imgae"">
+      </footer>
     </section>
 
     <script src="./script.js"></script>
